
* Add new TCL function addSecondTickSubscriber.

* Now possible to not specify an ID for a module. It will then not be possible
  to activate the module. This is typically useful for modules that have no
  command interface but rather is just doing something in the background.

* When reading TCL files, print a warning instead of erroring out if a file is
  not readable.



 1.6.1 -- 21 Jan 2018
----------------------

* ModuleEchoLink bugfix: Echolink remote roger beep was sent even though
  listen only mode was active on the local node.



 1.6.0 -- 30 Dec 2017
----------------------
* New settings PHONETIC_CALLSIGN SHORT_ID_VOICE_ENABLE SHORT_ID_CW_ENABLE SHORT_IDENT_INTERVAL LONG_ID_VOICE_ENABLE LONG_ID_CW_ENABLE LONG_IDENT_INTERVAL CW_AMP CW_WPM CW_PITCH

* Changed COURTESY_TONE to COURTESY_TONE Proper naming convention

* Updated systemd for new settings

* Added debian pkg build into src for current vesrion build.

* Changed RepeaterLogic to Duplex logic Naming convention

* No Sonames On-Modules

* Changed /src/svxlink/contrib to contrib_modules

* Fixed Hyphen vs Minus in man pages

* New Module Site_Status

* New Module a2d_mcp320x

* New Module svxlinkcfg

* Updated the Debian PKG build

* Cleaned up the gpio up/down scripts

* Add upstream patch to fix FTBFS with gcc 7. (Closes: #853672)

* Referred to $(CURDIR) in rules (Closes: #846703)

* Dropped Build-Depends: quilt

* Updated Standards-Version: to 3.9.8

* svxlink-server & remotetrx Depend:lsb-base (>= 3.0-6) b/c init scripts

* Shipping new qtel icons; used them in qtel.desktop (LP: #1591112)

* Fixed more spelling errors

* ModuleMetarInfo: smaller changes e.g. additional tcl function for raw
  output

* ModuleMetarInfo: Because of termination the metar service on noaa.gov some
  changes were needed in the module (weather.noaa.gov - >
  aviationweather.gov), better debug output if a metar can not be announced

* New argument "call" to EchoLink::is_receiving TCL event handler.
  Patch by hsmade.
