@@ -171,6 +171,24 @@ load. This tells SvxLink which modules to actually load on startup.
 .B CALLSIGN
 Specify the callsign that should be announced on the radio interface.
 .TP
+.B CW_AMP
+Specify the amplitude of the CW that should be used during any cw traffic,
+typically announcements. The amplitude is specified in dB. Default: -6.
+.TP
+.B CW_PITCH
+Specify the pitch (frequency in Hz) of the CW that should be used during any CW
+traffic, typically announcements. Default: 800.
+.TP
+.B CW_CPM
+Specify the Characters Per Minute of the CW that should be used during any CW
+traffic, typically announcements. If both CW_WPM and CW_CPM is set, CW_CPM will
+be used. Default: 100.
+.TP
+.B CW_WPM
+Specify the Words Per Minute of the CW that should be used during any CW
+traffic, typically announcements. If both CW_WPM and CW_CPM is set, CW_CPM will
+be used. Default: 20.
+.TP
 .B SHORT_IDENT_INTERVAL
 The number of minutes between short identifications. The purpose of the short
 identification is to just announce that the station is on the air. Typically just the
