@@ -3,25 +3,20 @@
 @brief   The logic core of the SvxLink Server application
 @author  Tobias Blomberg / SM0SVX
 @date	 2004-03-23
-
 This is the logic core of the SvxLink Server application. This is where
 everything is tied together. It is also the base class for implementing
 specific logic core classes (e.g. SimplexLogic and DuplexLogic).
-
 \verbatim
 SvxLink - A Multi Purpose Voice Services System for Ham Radio Use
 Copyright (C) 2003-2018 Tobias Blomberg / SM0SVX
-
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2 of the License, or
 (at your option) any later version.
-
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
-
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
@@ -170,9 +165,9 @@ Logic::Logic(Config &cfg, const string& name)
     tx_ctcss_mask(0),
     currently_set_tx_ctrl_mode(Tx::TX_OFF), is_online(true),
     dtmf_digit_handler(0),                  state_pty(0),
-    dtmf_ctrl_pty(0),						m_phonetic_spelling("1"),
-	m_time_format("12"),					m_cw_amp("200"),
-	m_cw_wpm("25"),							m_cw_pitch("600"),
+    dtmf_ctrl_pty(0),						
+	m_phonetic_spelling("1"),
+	m_time_format("12"),					
 	m_short_voice_id_enable("1"),			m_short_cw_id_enable("1"),
 	m_short_announce("short_annouce.wav"),	m_short_announce_enable("0"),
 	m_long_voice_id_enable("1"),			m_long_cw_id_enable("1"),
@@ -286,22 +281,7 @@ bool Logic::initialize(void)
   if (cfg().getValue(name(), "LONG_CW_ID_ENABLE", m_long_cw_id_enable))
   {
   }
-  
-  // Variable to set CW frequency
-  if (cfg().getValue(name(), "CW_PITCH", m_cw_pitch))
-  {
-  }   
 
-  // Variable to set CW WPM
-  if (cfg().getValue(name(), "CW_WPM", m_cw_wpm))
-  {
-  }  
-  
-  // Variable to set CW amp
-  if (cfg().getValue(name(), "CW_AMP", m_cw_amp))
-  {
-  }  
-  
   // variable to define the short announcement file name
   if (cfg().getValue(name(), "SHORT_ANNOUNCE", m_short_announce))
   {
@@ -669,10 +649,6 @@ bool Logic::initialize(void)
   event_handler->setVariable("phonetic_spelling", m_phonetic_spelling);
   // Configure variable to allow user to select 12h/24h time formats
   event_handler->setVariable("time_format", m_time_format);
-  // configure variables to allow user to configure CW tone settings
-  event_handler->setVariable("cw_amp", m_cw_amp);
-  event_handler->setVariable("cw_pitch", m_cw_pitch);
-  event_handler->setVariable("cw_wpm", m_cw_wpm);
   // configure variables to allow user to configure CW & VOICE ID enables
   event_handler->setVariable("short_voice_id_enable", m_short_voice_id_enable);
   event_handler->setVariable("short_cw_id_enable", m_short_cw_id_enable);
@@ -737,11 +713,6 @@ bool Logic::initialize(void)
   every_minute_timer.expired.connect(mem_fun(*this, &Logic::everyMinute));
   timeoutNextMinute();
   every_minute_timer.start();
-  
-  every_second_timer.setExpireOffset(100);
-  every_second_timer.expired.connect(mem_fun(*this, &Logic::everySecond));
-  timeoutNextSecond();
-  every_second_timer.start();
 
   every_second_timer.setExpireOffset(100);
   every_second_timer.expired.connect(mem_fun(*this, &Logic::everySecond));
@@ -1596,23 +1567,11 @@ void Logic::everyMinute(AtTimer *t)
 } /* Logic::everyMinute */
 
 
-<<<<<<< HEAD
-/* Experimental code to make a faster timer for 
-siteStatus module to work against
-
-BEGIN
-*/
-=======
->>>>>>> refs/remotes/sm0svx/master
 void Logic::timeoutNextSecond(void)
 {
   struct timeval tv;
   gettimeofday(&tv, NULL);
   struct tm *tm = localtime(&tv.tv_sec);
-<<<<<<< HEAD
-  tm->tm_min += 0;
-=======
->>>>>>> refs/remotes/sm0svx/master
   tm->tm_sec += 1;
   every_second_timer.setTimeout(*tm);
 } /* Logic::timeoutNextSecond */
@@ -1624,15 +1583,7 @@ void Logic::everySecond(AtTimer *t)
   timeoutNextSecond();
 } /* Logic::everySecond */
 
-<<<<<<< HEAD
-/* Experimental code to make a faster timer for 
-siteStatus module to work against
 
-END
-*/
-=======
-
->>>>>>> refs/remotes/sm0svx/master
 void Logic::dtmfDigitDetectedP(char digit, int duration)
 {
   cout << name() << ": digit=" << digit << endl;
@@ -1655,9 +1606,7 @@ void Logic::dtmfDigitDetectedP(char digit, int duration)
 
   if (dtmf_ctrl_pty != 0)
   {
-    stringstream sd;
-    sd << digit;
-    dtmf_ctrl_pty->write(sd.str().c_str(), 1);
+    dtmf_ctrl_pty->write(&digit, 1);
   }
 } /* Logic::dtmfDigitDetectedP */
 
@@ -1689,7 +1638,6 @@ void Logic::cleanup(void)
   exec_cmd_on_sql_close_timer.setEnable(false);
   send_courtesy_tone_timer.setEnable(false);
   every_minute_timer.stop();
-  every_second_timer.stop();
 
   if (LinkManager::hasInstance())
   {
