@@ -8,7 +8,7 @@ LIBECHOLIB=1.3.3
 LIBASYNC=1.5.99.3
 
 # SvxLink versions
-SVXLINK=1.6.99.6
+SVXLINK=1.6.99.7
 MODULE_HELP=1.0.0
 MODULE_PARROT=1.1.1
 MODULE_ECHOLINK=1.4.99.0
